src/objects/Ter_Matriz_Asignacion_Casos__c.object
<CustomObject>
    <description>Este objeto contiene los registros de la matriz de asignación de casos con la cual el sistema tipificará y asignará el responsable de los casos.</description>
    <fields>
        <fullName>Categoria_3__c</fullName>
        <description>Este campo contiene la categoría nro 3 que servirá para asignar el caso a la cola.</description>
        <label>Categoría 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ter_ANS__c</fullName>
        <description>Este campo corresponde al ANS que aplicará al caso.</description>
        <label>ANS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ter_Categoria_1__c</fullName>
        <description>Este campo contiene la categoría nro 1 que servirá para asignar el caso a la cola.</description>
        <label>Categoría 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ter_Categoria_2__c</fullName>
        <description>Este campo contiene la categoría nro 2 que servirá para asignar el caso a la cola.</description>
        <label>Categoría 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ter_Categoria_4__c</fullName>
        <description>Este campo contiene la categoría nro 4 que servirá para asignar el caso a la cola.</description>
        <label>Categoría 4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ter_Responsable__c</fullName>
        <description>Este campo contiene el responsable del caso.</description>
        <label>Responsable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Matriz Asignación Casos</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Ter_Responsable__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <displayFormat>MAS-{000000}-{YYYY}{MM}{DD}</displayFormat>
        <label>Nro. Registro Matriz</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matriz Asignación Casos</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>